Correct category name overlap on mobile

--- a/src/custom.scss
+++ b/src/custom.scss
@@ -240,7 +240,7 @@ svg {
 	}
 	div.left h5 {
 		font-weight: bold;
-		height: 65px;
+		height: 40px;
 		//vertical-align: bottom;
 		//margin-right: 5em;
 	}
